[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Sprites/EyeofDeath.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Instances/Eyeo.gd" type="Script" id=2]
[ext_resource path="res://Art/UI/enemyHealthProgress.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/enemyHealthUnder.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/enemyHealthOver.png" type="Texture" id=5]
[ext_resource path="res://Sounds/SFX/hitHurt.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0

[node name="Eyeo" type="Node2D" groups=["Eyeo"]]

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=["mobs"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
speed = 10
damage = 10
maxHealth = 15000
pickUpTime = 30
knockbackRes = 0.1
spright = NodePath("Sprite")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 1 )

[node name="enemyHealthBar" type="TextureProgress" parent="KinematicBody2D"]
margin_left = -11.0
margin_top = -35.0
margin_right = 11.0
margin_bottom = -30.0
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )

[node name="SoundHitHurt" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 6 )
volume_db = -12.0
bus = "SFX"

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -1, 4 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0

[connection signal="timeout" from="Timer" to="KinematicBody2D" method="_on_Timer_timeout"]
